--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,11 @@
             android:exported="false" />
         <activity
             android:name=".views.Cart.CartActivity"
+            android:exported="false"/>
+        <activity
             android:name=".views.BookSearchActivity"
-            android:exported="true" >
+            android:exported="true" />
+        <activity
             android:name=".views.RegisterActivity"
             android:exported="false" />
         <activity
@@ -41,11 +44,6 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".views.MainActivity"
-            android:exported="true"
-            android:label="@string/app_name">
         </activity>
     </application>
 
